[metadata]
name = exn
version = file: VERSION
url = https://pyrustic.github.com
author = Pyrustic Evangelist
author_email = sapiens@earth.invalid
maintainer = Pyrustic Evangelist
maintainer_email = sapiens@earth.invalid
description = Browse a dossier of exonotes
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    application
    pyrustic
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    exonote
    shared
    jesth
    suggestion
    gaspium
    viewstack
    viewable

[options.entry_points]
console_scripts =
    exn = exn.__main__:main
